FIXED: modal z-index for appointment window

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -25,3 +25,7 @@
     margin: 0 auto;
   }
 }
+
+.modal_z_index {
+  z-index: 99999;
+}
